kubernetes/apps/wordpress/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: wordpress
  labels:
    app: wordpress-app
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: php-fpm
      port: 9000
      targetPort: 9000
      protocol: TCP
    - name: mysql
      port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: wordpress
  type: ClusterIP
